# pyPDFlicenseschecker

./: .gitignore  LICENSE  Pipfile  README.md  requirements.txt  setup.cfg
PDFlicenseschecker/: CLI.py  PDFlicensescheckerclass.py  __init__.py
