[metadata]
name = PDFlicenseschecker
version = 0.0.1
description = A Python module for checking the license and the credits of PDF documents and images within them.
author = Giacomo Marchioro
author_email = marchiorogiacomo@gmail.com
license = MIT
url = https://github.com/giacomomarchioro/pyPDFlicenseschecker
project_urls =
    Source = https://github.com/giacomomarchioro/pyPDFlicenseschecker/tree/main/PDFlicenseschecker
long_description = file: README.md
long_description_content_type = text; charset=UTF-8
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows


[options]
packages = PDFlicenseschecker
install_requires = 
    tabulate
    Pillow
    PyPDF2

[options.entry_points]
console_scripts =
    PDFlicenseschecker = PDFlicenseschecker.CLI:RunCLI